--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,99 @@
-/* You can add global styles to this file, and also import other style files */
+@import url("https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@300..700&family=Space+Mono:ital,wght@0,400;0,700;1,400;1,700&display=swap");
+
+:root {
+  --fs-body: clamp(0.875rem, 0.75rem + 0.5vw, 1.125rem);
+
+  --fs-heading-6: clamp(0.95rem, 0.8rem + 0.65vw, 1.35rem);
+  --fs-heading-5: clamp(1.05rem, 0.875rem + 0.9vw, 1.6rem);
+  --fs-heading-4: clamp(1.175rem, 0.95rem + 1.2vw, 1.9rem);
+  --fs-heading-3: clamp(1.25rem, 0.98rem + 1.45vw, 2.1rem);
+  --fs-heading-2: clamp(1.5rem, 1.1rem + 2vw, 2.75rem);
+  --fs-heading-1: clamp(3.5rem, 2rem + 7vw, 8rem);
+
+  --bg-color: white;
+  --text-color: #2e2e2e;
+  --button-bg: #1232ff;
+  --button-text: white;
+  --button-hover-bg: #3451ff;
+  --span-text: #1232ff;
+  --search-bar-bg: #eee;
+  --search-bar-text: #8f8f8f;
+}
+
+/* #2146ea */
+body.dark-mode {
+  --bg-color: #1f1f1f;
+  --text-color: #ededed;
+  --button-bg: #3b5beb;
+  --button-text: #ededed;
+  --button-hover-bg: #0022ff;
+  --span-text: #3b5beb;
+  --search-bar-bg: #2c2c2c;
+  --search-bar-text: #8f8f8f;
+}
+
+* {
+  margin: 0;
+  padding: 0;
+}
+
+*,
+*::before,
+*::after {
+  box-sizing: inherit;
+}
+
+html {
+  box-sizing: border-box;
+  font: var(--fs-body) "Space Grotesk", sans-serif;
+}
+
+body {
+  max-height: 100vh;
+  padding: 2rem 5rem;
+  background-color: var(--bg-color);
+  color: var(--text-color);
+  transition: background-color 0.3s ease, color 0.3s ease;
+}
+
+svg {
+  fill: var(--text-color);
+  stroke: var(--text-color);
+}
+
+span.special-text {
+  color: var(--span-text);
+}
+
+img {
+  display: block;
+  width: 100%;
+  height: auto;
+}
+
+body,
+input,
+textarea,
+select,
+option {
+  font: inherit;
+}
+
+h1 {
+  font-size: var(--fs-heading-1);
+}
+h2 {
+  font-size: var(--fs-heading-2);
+}
+h3 {
+  font-size: var(--fs-heading-3);
+}
+h4 {
+  font-size: var(--fs-heading-4);
+}
+h5 {
+  font-size: var(--fs-heading-5);
+}
+h6 {
+  font-size: var(--fs-heading-6);
+}
