Added About and UI components + design optimisations

--- a/src/app/app.html
+++ b/src/app/app.html
@@ -1,4 +1,7 @@
 <app-header></app-header>
-<app-home></app-home>
+<!-- <app-home></app-home> -->
+<!-- <app-about></app-about> -->
+<!-- <app-empty-state></app-empty-state> -->
+<!-- <app-loader></app-loader> -->
 <router-outlet />
 <app-footer></app-footer>
