--- a/src/app/features/header/search-bar/search-bar.html
+++ b/src/app/features/header/search-bar/search-bar.html
@@ -1,5 +1,5 @@
 <div class="search-bar-wrapper">
-  <span class="search-icon">
+  <div class="search-icon">
     <svg
       xmlns="http://www.w3.org/2000/svg"
       viewBox="2.5 2.5 18.5 18.5"
@@ -9,11 +9,11 @@
       stroke-width="1"
       stroke-linecap="round"
     >
-      <circle cx="10" cy="10" r="7"></circle>
+      <circle cx="10" cy="10" r="7" fill="none"></circle>
 
       <line x1="15" y1="15" x2="20" y2="20"></line>
     </svg>
-  </span>
+  </div>
   <form id="searchForm">
     <input
       type="text"
