--- a/src/app/pages/home/home-hero/home-hero.html
+++ b/src/app/pages/home/home-hero/home-hero.html
@@ -1,9 +1,12 @@
 <section class="hero">
-  <h1>Your dev story, in <span class="special-text">bytes</span></h1>
-  <h3>
+  <h1>
+    Your dev story, <br />
+    in <span class="special-text">bytes</span>
+  </h1>
+  <h5>
     A home for developers to share insights, ideas, and the stories behind the
     code
-  </h3>
+  </h5>
   <app-cta-button [textContent]="'Read now'"></app-cta-button>
   <!-- !!Add router link to the button -->
 </section>
