--- a/src/app/features/footer/footer.html
+++ b/src/app/features/footer/footer.html
@@ -1,11 +1,11 @@
 <footer>
   <div class="container container-left">
-    <span>
+    <div class="copyright-icon">
       <svg
         xmlns="http://www.w3.org/2000/svg"
         viewBox="0 0 100 100"
-        width="20"
-        height="20"
+        width="15"
+        height="15"
         stroke="black"
         fill="none"
       >
@@ -24,13 +24,13 @@
           C
         </text>
       </svg>
-    </span>
+    </div>
     <p>2025 All rights reserved.</p>
   </div>
   <div class="container container-right">
     <ul>
-      <li><a>Privacy policy</a></li>
-      <li><a>Terms of use</a></li>
+      <li><a routerLink="/privacy-policy">Privacy policy</a></li>
+      <li><a routerLink="/terms-of-use">Terms of use</a></li>
     </ul>
   </div>
 </footer>
