--- a/src/app/pages/home/home-hero/home-hero.css
+++ b/src/app/pages/home/home-hero/home-hero.css
@@ -1,26 +1,30 @@
+:host {
+  flex: 1 1 auto;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+
 .hero {
   display: flex;
   flex-direction: column;
   align-items: center;
-  gap: 3rem;
-  margin: 10vh auto;
-  width: 75%;
+  gap: 2.5rem;
 }
 
 h1,
-h3 {
+h5 {
   text-align: center;
 }
 
 h1 {
-  width: 80vw;
   font-family: "Space Mono", sans-serif;
   word-spacing: -2rem;
   line-height: 1;
 }
 
-h3 {
-  width: 80vw;
+h5 {
+  width: 40ch;
   font-family: "Space Mono", sans-serif;
   font-weight: 400;
   line-height: 1.4;
