--- a/src/app/features/header/search-bar/search-bar.html
+++ b/src/app/features/header/search-bar/search-bar.html
@@ -16,7 +16,7 @@
   </div>
   <form id="searchForm">
     <input
-      type="text"
+      type="search"
       id="searchInput"
       placeholder="Search"
       aria-label="Search"
