--- a/src/app/modals/login/login.html
+++ b/src/app/modals/login/login.html
@@ -1,1 +1,7 @@
-<app-modal [fields]="fields"></app-modal>
+<app-modal
+  [mode]="mode"
+  [fields]="fields"
+  [title]="title"
+  [btnText]="btnText"
+  [layoutConfig]="layoutConfig"
+></app-modal>
