--- a/src/styles.css
+++ b/src/styles.css
@@ -16,23 +16,46 @@
   --button-bg: #1232ff;
   --button-text: white;
   --button-hover-bg: #3451ff;
+  --primary-button-bg: #2e2e2e;
+  --primary-button-text: white;
+  --primary-button-hover-bg: #373737;
   --span-text: #1232ff;
   --search-bar-bg: #eee;
   --search-bar-text: #8f8f8f;
   --border: #ddd;
+  --modal-backdrop: rgba(0, 0, 0, 0.7);
+  --modal-bg: white;
+  --input-label: #aaa;
+  --input-placeholder: #ddd;
+  --input-border: #ccc;
+  --input-border-focus: #757575;
 }
 
 body.dark-mode {
   --bg-color: #1f1f1f;
   --text-color: #ededed;
-  --link-color: #3b5beb;
-  --button-bg: #3b5beb;
+  /* --link-color: #3b5beb; */
+  --link-color: #7283f6;
+  /* --button-bg: #3b5beb; */
+  --button-bg: #3a4fcb;
   --button-text: #ededed;
-  --button-hover-bg: #0022ff;
-  --span-text: #3b5beb;
+  /* --button-hover-bg: #0022ff; */
+  --button-hover-bg: #4257c9;
+  /* --primary-button-bg: #3b5beb; */
+  --primary-button-bg: #3a4fcb;
+  --primary-button-text: #ededed;
+  --primary-button-hover-bg: #4257c9;
+  /* --span-text: #3b5beb; */
+  --span-text: #3a4fcb;
   --search-bar-bg: #2c2c2c;
   --search-bar-text: #8f8f8f;
   --border: #404040;
+  --modal-backdrop: rgba(17, 17, 17, 0.7);
+  --modal-bg: #1f1f1f;
+  --input-label: #7f7f7f;
+  --input-placeholder: #5f5f5f;
+  --input-border: #373737;
+  --input-border-focus: #666666;
 }
 
 * {
@@ -58,7 +81,7 @@ html {
 
 body {
   height: 100vh;
-  padding: 2rem 5rem 0 5rem;
+  padding: 0 5rem;
   display: flex;
   flex-direction: column;
   background-color: var(--bg-color);
