--- a/src/app/modals/login/login.html
+++ b/src/app/modals/login/login.html
@@ -3,5 +3,6 @@
   [fields]="fields"
   [title]="title"
   [btnText]="btnText"
-  [layoutConfig]="layoutConfig"
+  [fieldLayout]="fieldLayout"
+  (switchToRegisterModal)="onSwitchModal()"
 ></app-modal>
