--- a/src/app/ui/buttons/primary-button/primary-button.html
+++ b/src/app/ui/buttons/primary-button/primary-button.html
@@ -1,1 +1,7 @@
-<button type="submit">{{ btnText }}</button>
+<button type="submit" [disabled]="isLoading">
+  @if (!isLoading) {
+  {{ btnText }}
+  } @else {
+  <div class="loader"></div>
+  }
+</button>
