--- a/src/app/ui/form-field/form-field.html
+++ b/src/app/ui/form-field/form-field.html
@@ -3,5 +3,6 @@
   [name]="field.name"
   [id]="field.id"
   [placeholder]="field.placeholder"
+  [attr.required]="field.required ? '' : null"
 />
 <label [for]="field.id">{{ field.label }}</label>
