--- a/src/app/ui/buttons/primary-button/primary-button.css
+++ b/src/app/ui/buttons/primary-button/primary-button.css
@@ -3,18 +3,40 @@
 }
 
 button {
+  display: flex;
+  justify-content: center;
+  align-items: center;
   width: 100%;
-  padding: 1.2rem 0;
+  height: 4rem;
   border: none;
   border-radius: 0.5rem;
   color: var(--primary-button-text);
   background-color: var(--primary-button-bg);
-  font-size: 1rem;
-  font-weight: 500;
   font-family: inherit;
+  font-size: 1.1rem;
+  font-weight: 500;
   cursor: pointer;
 
   &:hover {
     background-color: var(--primary-button-hover-bg);
+  }
+}
+
+.loader {
+  width: 25px;
+  padding: 4px;
+  aspect-ratio: 1;
+  border-radius: 50%;
+  background: var(--primary-button-text);
+  --_m: conic-gradient(#0000 10%, #000), linear-gradient(#000 0 0) content-box;
+  -webkit-mask: var(--_m);
+  mask: var(--_m);
+  -webkit-mask-composite: source-out;
+  mask-composite: subtract;
+  animation: l3 1s infinite linear;
+}
+@keyframes l3 {
+  to {
+    transform: rotate(1turn);
   }
 }
