--- a/src/app/ui/modal/modal.css
+++ b/src/app/ui/modal/modal.css
@@ -4,7 +4,6 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  background-color: var(--modal-backdrop);
 }
 
 .modal-wrapper {
@@ -44,5 +43,101 @@ p {
     text-decoration-color: var(--search-bar-text);
     text-decoration-thickness: 1.5px;
     text-underline-offset: 4.5px;
+    cursor: pointer;
   }
+}
+
+/* Input field styles */
+.field-wrapper {
+  flex-basis: 100%;
+  display: flex;
+  flex-direction: column;
+  font-size: 0.7rem;
+}
+
+label {
+  color: var(--input-label);
+  font-weight: 300;
+}
+
+label {
+  text-transform: uppercase;
+}
+
+input {
+  order: 1;
+  border: none;
+  border-bottom: 1px solid var(--input-border);
+  background-color: var(--modal-bg);
+  padding: 0.7rem 0.8rem 0.5rem 0.8rem;
+  color: inherit;
+  outline: none;
+  transition: border-bottom 0.3s ease-in-out;
+  font-size: 0.8rem;
+
+  &::placeholder {
+    color: var(--input-placeholder);
+    font-weight: 300;
+  }
+
+  &:focus {
+    border-bottom: 1px solid var(--input-border-focus);
+  }
+}
+
+.field-wrapper.checkbox {
+  flex-direction: row;
+  align-items: center;
+
+  input,
+  label {
+    cursor: pointer;
+  }
+
+  input {
+    appearance: none;
+    border: none;
+  }
+
+  label {
+    order: 1;
+    text-transform: none;
+    position: relative;
+
+    &::before {
+      content: "";
+      display: block;
+      position: absolute;
+      top: 9px;
+      left: -22px;
+      width: 15px;
+      height: 15px;
+      margin-top: -10px;
+      border: 1px solid var(--input-border);
+      border-radius: 0.2rem;
+    }
+
+    &::after {
+      content: "";
+      position: absolute;
+      top: 2.5px;
+      left: -18.5px;
+      width: 8px;
+      height: 8px;
+      background-color: var(--text-color);
+      border-radius: 2px;
+      opacity: 0;
+      transform: scale(0);
+      transition: all 0.3s;
+    }
+  }
+
+  input:checked + label::after {
+    opacity: 1;
+    transform: scale(1);
+  }
+}
+
+.field-wrapper.row-layout {
+  flex: 1 1 45%;
 }
