Added form validation, login + conditional header rendering based on user login status

--- a/src/app/modals/login/login.html
+++ b/src/app/modals/login/login.html
@@ -5,4 +5,7 @@
   [btnText]="btnText"
   [fieldLayout]="fieldLayout"
   (switchToRegisterModal)="onSwitchModal()"
+  (login)="onLogin($event)"
+  [isLoading]="isLoading"
+  [serverErrorMessage]="serverErrorMessage"
 ></app-modal>
