--- a/src/app/modals/register/register.html
+++ b/src/app/modals/register/register.html
@@ -7,4 +7,5 @@
   (switchToLoginModal)="onSwitchModal()"
   (register)="onRegister($event)"
   [isLoading]="isLoading"
+  [serverErrorMessage]="serverErrorMessage"
 ></app-modal>
