--- a/src/app/ui/buttons/primary-button/primary-button.html
+++ b/src/app/ui/buttons/primary-button/primary-button.html
@@ -1,4 +1,4 @@
-<button type="submit" [disabled]="isLoading">
+<button type="button" [disabled]="isLoading">
   @if (!isLoading) {
   {{ btnText }}
   } @else {
