Refactoring + added logout

--- a/src/app/features/header/header.html
+++ b/src/app/features/header/header.html
@@ -11,6 +11,7 @@
       (loginClick)="onLoginClick()"
       (registerClick)="onRegisterClick()"
       (toggleMenu)="toggleMenu()"
+      (logoutClick)="onLogoutClick()"
     ></app-nav-menu>
 
     <app-theme-toggle-button
