--- a/src/app/features/header/menu-dropdown/menu-dropdown.html
+++ b/src/app/features/header/menu-dropdown/menu-dropdown.html
@@ -1,7 +1,7 @@
 <ul>
   <li><a>view profile</a></li>
   <li><a>my posts</a></li>
-  <li class="logout">
+  <li class="logout" (click)="onLogout()">
     <div class="btn logout-icon-btn">
       <svg
         xmlns="http://www.w3.org/2000/svg"
