--- a/src/styles.css
+++ b/src/styles.css
@@ -29,6 +29,7 @@
   --input-placeholder: #ddd;
   --input-border: #ccc;
   --input-border-focus: #757575;
+  --input-autofill-bg: #f4f4f4;
   --error-msg-bg: #f6ebeb;
 }
 
@@ -52,6 +53,7 @@ body.dark-mode {
   --input-placeholder: #5f5f5f;
   --input-border: #373737;
   --input-border-focus: #666666;
+  --input-autofill-bg: #272727;
   --error-msg-bg: #381919;
 }
 
