Added article create page + text editor

--- a/src/app/features/header/nav-menu/nav-menu.html
+++ b/src/app/features/header/nav-menu/nav-menu.html
@@ -42,7 +42,7 @@
   [textContent]="'sign up'"
 ></app-cta-button>
 } @else {
-<a class="btn create-icon-btn">
+<a routerLink="/articles/create" class="btn create-icon-btn">
   <svg
     xmlns="http://www.w3.org/2000/svg"
     viewBox="20 17 60 65"
