--- a/src/app/pages/home/home-hero/home-hero.css
+++ b/src/app/pages/home/home-hero/home-hero.css
@@ -18,14 +18,14 @@ h5 {
 }
 
 h1 {
-  font-family: "Space Mono", sans-serif;
+  font-family: "Space Mono", monospace;
   word-spacing: -2rem;
   line-height: 1;
 }
 
 h5 {
   width: 40ch;
-  font-family: "Space Mono", sans-serif;
+  font-family: "Space Mono", monospace;
   font-weight: 400;
   line-height: 1.4;
 }
