--- a/src/app/pages/article-editor/text-editor/text-editor.html
+++ b/src/app/pages/article-editor/text-editor/text-editor.html
@@ -1,1 +1,4 @@
-<div #editor class="quill-editor"></div>
+<form [formGroup]="form">
+  <div #editor class="quill-editor"></div>
+  <input type="hidden" formControlName="content" />
+</form>
