--- a/src/app/features/header/menu-dropdown/menu-dropdown.html
+++ b/src/app/features/header/menu-dropdown/menu-dropdown.html
@@ -1,6 +1,6 @@
 <ul>
   <li><a>view profile</a></li>
-  <li><a>my posts</a></li>
+  <li><a>my articles</a></li>
   <li class="logout" (click)="onLogout()">
     <div class="btn logout-icon-btn">
       <svg
