--- a/src/app/pages/article-editor/article-meta/article-meta.html
+++ b/src/app/pages/article-editor/article-meta/article-meta.html
@@ -1,65 +1,83 @@
-<div class="actions-bar">
-  <div class="inputs-wrapper">
-    <div class="category-select">
-      <select name="categories" id="categories">
-        <option value="" disabled selected>Choose a category</option>
-        @for (category of articleCategories; track $index) {
-        <option [value]="category.toLowerCase()">{{ category }}</option>
-        }
-      </select>
-      <svg
-        xmlns="http://www.w3.org/2000/svg"
-        viewBox="-1.25 5.75 22.5 12.5"
-        width="13"
-        height="8"
-        stroke="black"
-        fill="none"
-        stroke-width="2.5"
-        stroke-linecap="round"
-      >
-        <line x1="0" y1="7" x2="10" y2="17" />
-        <line x1="20" y1="7" x2="10" y2="17" />
-      </svg>
+<div [formGroup]="form" class="container">
+  <div class="actions-bar">
+    <div class="inputs-wrapper">
+      <div class="category-select">
+        <select name="categories" id="categories" formControlName="category">
+          <option value="" disabled selected>Choose a category</option>
+          @for (category of articleCategories; track $index) {
+          <option [value]="category">{{ category }}</option>
+          }
+        </select>
+        <svg
+          xmlns="http://www.w3.org/2000/svg"
+          viewBox="-1.25 5.75 22.5 12.5"
+          width="13"
+          height="8"
+          stroke="black"
+          fill="none"
+          stroke-width="2.5"
+          stroke-linecap="round"
+        >
+          <line x1="0" y1="7" x2="10" y2="17" />
+          <line x1="20" y1="7" x2="10" y2="17" />
+        </svg>
+      </div>
+
+      <div class="upload-input">
+        <label for="file-upload">
+          <span>{{ fileName || "Upload a thumbnail" }}</span>
+          <div class="btn upload-icon-btn">
+            <svg
+              xmlns="http://www.w3.org/2000/svg"
+              viewBox="13.5 14 37 34"
+              width="20"
+              height="15"
+              fill="none"
+              stroke="black"
+              stroke-width="3"
+              stroke-linecap="round"
+              stroke-linejoin="round"
+            >
+              <path d="M16 32 L16 40 Q16 46 24 46 L40 46 Q48 46 48 40 L48 32" />
+
+              <line x1="32" y1="36" x2="32" y2="16" />
+              <line x1="24" y1="25" x2="32" y2="16" />
+              <line x1="40" y1="25" x2="32" y2="16" />
+            </svg>
+          </div>
+        </label>
+        <input
+          #fileUpload
+          id="file-upload"
+          type="file"
+          hidden
+          accept="image/*"
+          formControlName="thumbnailUrl"
+          (change)="onFileSelected($event)"
+        />
+      </div>
     </div>
 
-    <!-- !Implement the fileName variable (change event) -->
-    <div class="upload-input">
-      <label for="file-upload">
-        {{ fileName || "Upload a thumbnail" }}
-        <div class="btn upload-icon-btn">
-          <svg
-            xmlns="http://www.w3.org/2000/svg"
-            viewBox="13.5 14 37 34"
-            width="20"
-            height="15"
-            fill="none"
-            stroke="black"
-            stroke-width="3"
-            stroke-linecap="round"
-            stroke-linejoin="round"
-          >
-            <path d="M16 32 L16 40 Q16 46 24 46 L40 46 Q48 46 48 40 L48 32" />
-
-            <line x1="32" y1="36" x2="32" y2="16" />
-            <line x1="24" y1="25" x2="32" y2="16" />
-            <line x1="40" y1="25" x2="32" y2="16" />
-          </svg>
-        </div>
-      </label>
-      <input id="file-upload" type="file" hidden accept="image/*" />
+    <div class="btn publish-btn">
+      @if (isFormInvalid) {
+      <span #popUp class="popup-error fade">All fields are required</span>
+      }
+      <app-cta-button
+        [textContent]="'Publish'"
+        (click)="onSubmit()"
+      ></app-cta-button>
     </div>
   </div>
 
-  <app-cta-button [textContent]="'Publish'"></app-cta-button>
-</div>
-
-<div class="title-input">
-  <textarea
-    #titleTextarea
-    rows="1"
-    name="title"
-    id="title"
-    placeholder="Title"
-    (input)="resizeTitleField()"
-  ></textarea>
+  <div class="title-input">
+    <textarea
+      formControlName="title"
+      #titleTextarea
+      rows="1"
+      name="title"
+      id="title"
+      placeholder="Title"
+      (input)="resizeTitleField()"
+    ></textarea>
+  </div>
 </div>
