--- a/src/app/ui/loader/loader.css
+++ b/src/app/ui/loader/loader.css
@@ -1,3 +1,10 @@
+:host {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  align-items: center;
+}
+
 .loader {
   width: 16px;
   height: 16px;
