--- a/src/app/features/article/article-grid/article-grid.html
+++ b/src/app/features/article/article-grid/article-grid.html
@@ -5,7 +5,7 @@
   @for (article of articles; track $index) {
   <app-article-card
     [article]="article"
-    (openAuthorDetail)="onAuthorClick($event)"
+    (openAuthorDetails)="onAuthorClick($event)"
   ></app-article-card>
   }
 </div>
