--- a/src/app/features/header/header.html
+++ b/src/app/features/header/header.html
@@ -12,6 +12,7 @@
       (registerClick)="onRegisterClick()"
       (toggleMenu)="toggleMenu()"
       (logoutClick)="onLogoutClick()"
+      (myArticlesClick)="onMyArticlesClick()"
     ></app-nav-menu>
 
     <app-theme-toggle-button
