--- a/src/app/features/header/menu-dropdown/menu-dropdown.css
+++ b/src/app/features/header/menu-dropdown/menu-dropdown.css
@@ -3,11 +3,16 @@
   width: 150%;
   top: 20px;
   left: 0;
+  border-radius: 0.5rem;
+  margin-top: 1rem;
+  background-color: var(--bg-color);
+  transition: background-color 0.3s ease, color 0.3s ease;
 }
 
 ul {
+  padding: 0.5rem;
+  padding-top: 0;
   padding-left: 0;
-  margin-top: 1rem;
   display: flex;
   flex-direction: column;
   gap: 0.5rem;
