--- a/src/app/pages/articles/articles.html
+++ b/src/app/pages/articles/articles.html
@@ -9,6 +9,10 @@
 <app-article-grid
   [articles]="articles"
   [columns]="3"
-  (openAuthorDetail)="onAuthorClick($event)"
+  (openAuthorDetails)="onAuthorClick($event)"
 ></app-article-grid>
+}
+<div #scrollAnchor class="scroll-anchor"></div>
+@if (isLoadingMore) {
+<app-loader></app-loader>
 }
