--- a/src/app/pages/home/home-hero/home-hero.html
+++ b/src/app/pages/home/home-hero/home-hero.html
@@ -7,6 +7,8 @@
     A home for developers to share insights, ideas, and the stories behind the
     code
   </h5>
-  <app-cta-button [textContent]="'Read now'"></app-cta-button>
-  <!-- !!Add router link to the button -->
+  <app-cta-button
+    [textContent]="'Read now'"
+    routerLink="/articles"
+  ></app-cta-button>
 </section>
