--- a/src/styles.css
+++ b/src/styles.css
@@ -185,6 +185,11 @@ h6 {
   li {
     line-height: 2;
   }
+
+  a {
+    text-decoration: none !important;
+    color: var(--link-color) !important;
+  }
 }
 
 .ql-toolbar.ql-snow {
@@ -236,7 +241,7 @@ h6 {
 /*& Inline code */
 .ql-editor code {
   background-color: var(--search-bar-bg) !important;
-  color: var(--button-bg);
+  color: var(--link-color);
   font-family: inherit;
   font-size: inherit !important;
   padding: 0.1rem 0.5rem !important;
@@ -262,9 +267,64 @@ h6 {
 }
 
 .ql-tooltip a {
-  color: var(--button-bg) !important;
+  color: var(--link-color) !important;
 }
 
 .ql-tooltip.ql-editing input {
   background-color: var(--search-bar-bg) !important;
+}
+
+/** Article details content styles **/
+.article-content {
+  width: 100%;
+  height: 100%;
+  font-family: "Space Mono", monospace;
+  font-size: 0.9rem;
+  line-height: 2;
+
+  li {
+    line-height: 2;
+
+    &[data-list="bullet"] {
+      list-style-type: disc;
+    }
+  }
+
+  h2 {
+    font-size: calc(var(--fs-heading-2) * 0.56);
+  }
+
+  h3 {
+    font-size: calc(var(--fs-heading-3) * 0.56);
+  }
+
+  p {
+    margin-bottom: 0;
+  }
+
+  a {
+    color: var(--link-color);
+  }
+
+  code {
+    background-color: var(--search-bar-bg);
+    color: var(--link-color);
+    font-family: inherit;
+    font-size: inherit;
+    padding: 0.1rem 0.5rem;
+    border-radius: 0.5rem;
+    transition: background-color 0.3s ease, color 0.3s ease;
+  }
+
+  .ql-code-block-container {
+    background-color: var(--search-bar-bg);
+    padding: 1.5rem 2rem;
+    border-radius: 0.8rem;
+    transition: background-color 0.3s ease, color 0.3s ease;
+  }
+
+  .ql-code-block {
+    white-space: pre;
+    font-size: 0.9rem;
+  }
 }
